syntax = "proto3";

package com.appliedrec.verid3.serialization.common;

import "com/appliedrec/verid3/serialization/common/pointf.proto";

option swift_prefix = "";

message Face {
    float x = 1;
    float y = 2;
    float width = 3;
    float height = 4;
    float yaw = 5;
    float pitch = 6;
    float roll = 7;
    float quality = 8;
    repeated PointF landmarks = 9;
    PointF left_eye = 10;
    PointF right_eye = 11;
    optional PointF nose_tip = 12;
    optional PointF mouth_centre = 13;
}